JDK 11 preparation and jakarta uptake.
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>